--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,8 @@ on: [push, pull_request]
 
 jobs:
 
-  build:
-    name: test
+  test-non-docker:
+    name: test non-docker
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -28,4 +28,30 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Test package
-        run: go test -v ./...
+        run: go test -run ^(?!Docker).*$ -v ./...
+
+  test-docker:
+    name: test docker
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: ['1.23.x']
+        typst-docker-image: 
+          - 'ghcr.io/typst/typst:v0.12.0'
+          - 'ghcr.io/typst/typst:v0.13.0'
+          - 'ghcr.io/typst/typst:v0.13.1'
+          - 'ghcr.io/typst/typst:0.14.0'
+
+    steps:
+      - name: Set up Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Test package
+        run: go test -run ^Docker.*$ -v ./...
+        env:
+          TYPST_DOCKER_IMAGE: ${{ matrix.typst-docker-image }}
